Sending Form Data with Socket server & client VP 33

--- a/32.html-websocket.html
+++ b/32.html-websocket.html
@@ -9,7 +9,20 @@
 </head>
 
 <body>
+    <form action="javascript:void(0)">
+        <!-- javascript:void(0):  https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/void -->
 
+        <label for="message">Message</label>
+        <input type="text" name="message" id="message">
+        <input type="submit" value="Submit">
+    </form>
+    <!-- <a href="javascript:void(0);">
+        Click here to do nothing
+    </a>
+
+    <a href="javascript:void(document.body.style.backgroundColor='green');">
+        Click here for green background
+    </a> -->
 
     <script src="32.websocket-client.js"></script>
 </body>
