Communication with all clients VP 36

--- a/32.html-websocket.html
+++ b/32.html-websocket.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <h1>APP Server</h1>
     <form action="javascript:void(0)">
         <!-- javascript:void(0):  https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/void -->
 
@@ -16,6 +17,7 @@
         <input type="text" name="message" id="message">
         <input type="submit" value="Submit">
     </form>
+    <div class="messages"></div>
     <!-- <a href="javascript:void(0);">
         Click here to do nothing
     </a>
